fixes some visual issues on mobile devices. corrects url to put product from wishlist to basket. re#768

--- a/templates/Evo/themes/base/less/base.less
+++ b/templates/Evo/themes/base/less/base.less
@@ -277,6 +277,15 @@ hr.hr-sm {
     .center-sm {
         text-align: center;
     }
+    /* Fix for form-group buttons with icon inside */
+    .btn .fa.visible-xs,
+    .btn i.glyphicon{
+        line-height: 22px;
+    }
+    .tags .label{
+        display: inline-block;
+        margin-bottom: 5px;
+    }
 }
 
 .attr-label {
